Modifications et corrections sur le composant Collapse avec un peu de corrections CSS sur la page Article.

--- a/star-wars-blog/src/styles/Article.css
+++ b/star-wars-blog/src/styles/Article.css
@@ -81,7 +81,10 @@
     font-size: 22px;
     text-align: justify;
     font-weight: bold;
-    color: yellow;
     line-height: 45px;
     cursor: default;
+}
+
+.description-div p {
+    color: yellow;
 }
