--- a/star-wars-blog/src/styles/Forum.css
+++ b/star-wars-blog/src/styles/Forum.css
@@ -14,22 +14,31 @@
 
 .forum-content {
     position: absolute;
-    color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    min-height: 100vh;
     text-align: justify;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .chart-section {
+    height: fit-content;
+    overflow: hidden;
     margin-top: 60px;
+    width: 100%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-h1 {
+.chart-text {
+    color: white;
+}
+
+.forum-title {
+    color: white;
     font-family: 'Starjedi';
     margin-top: 50px;
 }
